--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.2",
   "description": "Script to generate a list of the contributors to js-IPFS since a given date",
   "main": "index.js",
+  "type": "module",
   "bin": {
     "js-ipfs-contributors": "index.js"
   },
@@ -13,17 +14,16 @@
   "author": "@ipfs/js-core",
   "license": "(Apache-2.0 OR MIT)",
   "dependencies": {
-    "chalk": "^4.0.0",
-    "debug": "^4.1.1",
-    "inquirer": "^7.0.4",
-    "name-your-contributors": "^3.4.0",
-    "node-fetch": "^2.6.0",
-    "ora": "^5.3.0",
-    "pretty-ms": "^7.0.0",
-    "yargs": "^16.2.0"
+    "chalk": "^5.3.0",
+    "debug": "^4.3.4",
+    "inquirer": "^9.2.10",
+    "name-your-contributors": "^3.10.0",
+    "ora": "^7.0.1",
+    "pretty-ms": "^8.0.0",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "standard": "^16.0.3"
+    "standard": "^17.1.0"
   },
   "repository": {
     "type": "git",
