--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "js-ipfs-contributors",
+  "name": "helia-contributors",
   "version": "1.1.2",
-  "description": "Script to generate a list of the contributors to js-IPFS since a given date",
+  "description": "Script to generate a list of the contributors to helia since a given date",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "js-ipfs-contributors": "index.js"
+    "helia-contributors": "index.js"
   },
   "scripts": {
     "start": "node index",
     "test": "standard"
   },
-  "author": "@ipfs/js-core",
+  "author": "@SgtPooki",
   "license": "(Apache-2.0 OR MIT)",
   "dependencies": {
     "chalk": "^5.3.0",
@@ -27,10 +27,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ipfs-shipyard/js-ipfs-contributors.git"
+    "url": "git+https://github.com/SgtPooki/helia-contributors.git"
   },
   "bugs": {
-    "url": "https://github.com/ipfs-shipyard/js-ipfs-contributors/issues"
+    "url": "https://github.com/SgtPooki/helia-contributors/issues"
   },
-  "homepage": "https://github.com/ipfs-shipyard/js-ipfs-contributors#readme"
+  "homepage": "https://github.com/SgtPooki/helia-contributors#readme"
 }
